; ModuleID = '/home/carl/AnghaBench/gb-studio/buildTools/darwin-x64/gbdk/examples/gb/extr_sound.c_play_music.c'
source_filename = "/home/carl/AnghaBench/gb-studio/buildTools/darwin-x64/gbdk/examples/gb/extr_sound.c_play_music.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@music = common dso_local global i64* null, align 8
@END = common dso_local global i64 0, align 8
@SILENCE = common dso_local global i64 0, align 8
@FREQUENCY = common dso_local global i32 0, align 4
@frequencies = common dso_local global i32* null, align 8
@PLAY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @play_music(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  store i64 0, i64* %3, align 8
  br label %4

4:                                                ; preds = %32, %1
  %5 = load i64*, i64** @music, align 8
  %6 = load i64, i64* %3, align 8
  %7 = getelementptr inbounds i64, i64* %5, i64 %6
  %8 = load i64, i64* %7, align 8
  %9 = load i64, i64* @END, align 8
  %10 = icmp ne i64 %8, %9
  br i1 %10, label %11, label %36

11:                                               ; preds = %4
  %12 = load i64*, i64** @music, align 8
  %13 = load i64, i64* %3, align 8
  %14 = getelementptr inbounds i64, i64* %12, i64 %13
  %15 = load i64, i64* %14, align 8
  %16 = load i64, i64* @SILENCE, align 8
  %17 = icmp ne i64 %15, %16
  br i1 %17, label %18, label %32

18:                                               ; preds = %11
  %19 = load i64, i64* %2, align 8
  %20 = load i32, i32* @FREQUENCY, align 4
  %21 = load i32*, i32** @frequencies, align 8
  %22 = load i64*, i64** @music, align 8
  %23 = load i64, i64* %3, align 8
  %24 = getelementptr inbounds i64, i64* %22, i64 %23
  %25 = load i64, i64* %24, align 8
  %26 = getelementptr inbounds i32, i32* %21, i64 %25
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @update_value(i64 %19, i32 %20, i32 %27)
  %29 = load i64, i64* %2, align 8
  %30 = load i32, i32* @PLAY, align 4
  %31 = call i32 @update_value(i64 %29, i32 %30, i32 1)
  br label %32

32:                                               ; preds = %18, %11
  %33 = call i32 @delay(i32 500)
  %34 = load i64, i64* %3, align 8
  %35 = add i64 %34, 1
  store i64 %35, i64* %3, align 8
  br label %4

36:                                               ; preds = %4
  ret void
}

declare dso_local i32 @update_value(i64, i32, i32) #1

declare dso_local i32 @delay(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
